<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="WarstwaPrezentacji.WydatkiPrezentery.UsunWydatekZatwierdzeniePrezenter"
    tools:showIn="@layout/activity_usun_wydatek_zatwierdzenie_prezenter">
    <TextView
        android:id="@+id/uwzp_usun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/udun_napis"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/uwzp_guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uwzp_pytanie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/back"
        android:gravity="center"
        android:text="@string/uwzp_pytanie_napis"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/uwzp_guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uwzp_guideline4" />

    <Button
        android:id="@+id/uwzp_przycisk_tak"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tak"
        android:background="@drawable/button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/uwzp_guideline3"
        app:layout_constraintEnd_toStartOf="@+id/uwzp_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uwzp_guideline2" />

    <Button
        android:id="@+id/uwzp_przycisk_nie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nie"
        android:background="@drawable/button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/uwzp_guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/uwzp_guideline"
        app:layout_constraintTop_toTopOf="@+id/uwzp_guideline2" />

    <android.support.constraint.Guideline
        android:id="@+id/uwzp_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/uwzp_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/uwzp_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/uwzp_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/uwzp_guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

</android.support.constraint.ConstraintLayout>
